# Training_portal

./: .gitignore  Deployment  LICENSE  README.md  base_command  docker-compose.yaml  locustfile.py  mainapp  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py
deployment_data/: Deployment  base_command
git-hooks/: pre-commit
mainapp/: urls.py
mainapp/templates/mainapp/: index.html  login.html
nginx/: nginx.conf
src/: Dockerfile  db_vmal.sqlite3  local.docker-compose.yaml
src/authapp/: admin.py  forms.py  models.py  urls.py  views.py
src/authapp/fixtures/: 001_authapp.json  004_authapp.json  005_authapp.json  vmal_users.json
src/authapp/migrations/: 0001_initial.py  0002_initial.py  0002_user_is_teacher.py  0003_user_course.py  0003_user_is_teacher_approved.py  0004_user_avatar.py
src/config/: __init__.py  celery.py  conf_prod.py  settings.py  settings_prod.py  urls.py
src/docs/: .buildinfo  forms_auth.html  genindex.html  index.html  models.html  models_auth.html  objects.inv  py-modindex.html  search.html  searchindex.js  serializers.html  views.html  views_auth.html
src/docs/_sources/: models.rst.txt  models_auth.rst.txt  serializers.rst.txt
src/documentation_project/source/: conf.py  forms_auth.rst  index.rst  views.rst  views_auth.rst
src/fixtures/: 007_all.json  008_all.json  009_all.json  009_all_old.json  010_all.json
src/mainapp/: admin.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/templates/: log_view.html
src/utils/: utils.py
(+100 files in other folders)
