[tool.flake8]
max-line-length = 120
per-file-ignores = [
    '__init__.py:F401',
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "Django==4.2.5",
    "django-ckeditor>=6.7.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
