[tool.flake8]
max-line-length = 120
per-file-ignores = [
    '__init__.py:F401',
]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.17.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "Django==4.2.5",
    "django-ckeditor>=6.7.0",
    "pillow>=10.1.0",
    "djangorestframework>=3.14.0",
    "pylint>=3.0.1",
    "celery>=5.3.4",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}
